--- a/port.css
+++ b/port.css
@@ -12,7 +12,8 @@ html{
 }
 
 body{
-    background-image: linear-gradient(135deg, black 10%, #434343 80%); 
+    /* background-image: linear-gradient(135deg, black 10%, #434343 80%);  */
+    background: linear-gradient(109.6deg, rgba(0, 0, 0, 0.93) 11.2%, rgb(63, 61, 61) 78.9%);
     color: #fff;
     
     
@@ -174,6 +175,25 @@ nav ul li a:hover::after{
     flex-basis: 60%;
 }
 
+ .tech-list{
+
+        display: grid;
+        grid-template-columns: repeat(2, minmax(150px, 10px));
+        list-style-type: none;
+        padding-top: 20px;
+}
+
+.tech{
+    display: block;
+    unicode-bidi: isolate;
+}
+
+.tech-list .tech::before {
+    color: aqua;
+    content: "▹";
+    left: 0;
+   
+}
 .sub{
     font-size: 60px;
     font-weight: 600;
